--- a/src/view/css/main.css
+++ b/src/view/css/main.css
@@ -502,6 +502,18 @@ main {
   margin: 0 0 25px;
   text-transform: uppercase; }
 
+#work-images {
+  margin: 30px 0 0; }
+  #work-images .work-images-list {
+    list-style: none;
+    margin: 0;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap; }
+    #work-images .work-images-list li {
+      width: 290px;
+      margin: 0 5px 10px; }
+
 /* blocks */
 .home-content {
   display: flex;
