--- a/src/view/sass/modules/_components.scss
+++ b/src/view/sass/modules/_components.scss
@@ -300,3 +300,19 @@ main{
 	text-transform: uppercase;
 }
 
+#work-images{
+	margin: 30px 0 0;
+	.work-images-list{
+		list-style: none;
+		margin: 0;
+
+		display: flex;
+		justify-content: space-around;
+		flex-wrap: wrap;
+
+		li{
+			width: 290px;
+			margin: 0 5px 10px;
+		}
+	}
+}
